ios/fullstory_flutter/shared_flutter.xcframework/ios-arm64_x86_64-simulator/Headers/shared_flutter.h

enum BlockType {
  Excluded,
  Masked,
  Recorded,
  Omitted,
  Unmatched,
};
typedef uint32_t BlockType;
typedef struct DrawingBundlerHandle DrawingBundlerHandle;
typedef struct BlockRulesHandle {
  uint8_t _priv[0];
} BlockRulesHandle;
typedef struct ByteArray {
  uint8_t *ptr;
  uintptr_t len;
  uintptr_t capacity;
  bool finalized;
  bool delegated;
} ByteArray;
typedef struct KeepRulesHandle {
  uint8_t _priv[0];
} KeepRulesHandle;
typedef struct BlockResult {
  BlockType block_type;
  char *error;
  char *matched_selector;
} BlockResult;
typedef struct SelectorAttributes {
  const char *tag;
  const char *const *classes;
  uintptr_t classes_len;
  const char *const *attr_names;
  const char *const *attr_values;
  uintptr_t attrs_len;
} SelectorAttributes;
typedef struct KeepResult {
  bool matched;
  char *error;
  char *matched_selector;
} KeepResult;
typedef struct DrawingHandle {
  uint8_t _priv[0];
} DrawingHandle;
struct BlockRulesHandle *decode_block_rules(struct ByteArray data);
struct KeepRulesHandle *decode_keep_rules(struct ByteArray data);
struct BlockRulesHandle *decode_block_rules_from_session_data(struct ByteArray data);
struct KeepRulesHandle *decode_keep_rules_from_session_data(struct ByteArray data);
uintptr_t randomize_string(const char *s,
                           uint32_t render_object_hash,
                           char *output_buffer,
                           uintptr_t buffer_size);
const struct BlockResult *eval_view_path(struct BlockRulesHandle *handle,
                                         const struct SelectorAttributes *const *view_path_ptr,
                                         uintptr_t view_path_len,
                                         bool consented,
                                         bool include_matched_selector);
const struct KeepResult *eval_keep_rule(struct KeepRulesHandle *handle,
                                        int16_t event_type,
                                        const struct SelectorAttributes *const *view_path_ptr,
                                        uintptr_t view_path_len,
                                        bool include_matched_selector);
void free_block_rules(struct BlockRulesHandle *data);
void free_keep_rules(struct KeepRulesHandle *data);
void free_eval_result(struct BlockResult *result);
void free_keep_result(struct KeepResult *result);
struct DrawingBundlerHandle *create_drawing_bundler(void);
uint32_t add_drawing_to_bundle(struct DrawingBundlerHandle *bundler_handle,
                               struct DrawingHandle *drawing_handle,
                               uint64_t view_id);
struct ByteArray *finish_bundle(struct DrawingBundlerHandle *bundler_handle);
struct ByteArray *read_bundle(struct DrawingBundlerHandle *bundler_handle);
void free_byte_array(struct ByteArray *byte_array);
struct ByteArray *canvas_definition(void);
struct DrawingHandle *start_drawing(void);
struct ByteArray *get_drawing(struct DrawingHandle *handle);
void free_drawing(struct DrawingHandle *data);
void add_view_id(struct DrawingHandle *handle, uint32_t view_id);
void clip_rect(struct DrawingHandle *handle,
               int64_t left,
               int64_t top,
               int64_t right,
               int64_t bottom,
               uint8_t op);
void draw_circle(struct DrawingHandle *handle,
                 int64_t center_x,
                 int64_t center_y,
                 float radius,
                 uint8_t alpha,
                 uint8_t red,
                 uint8_t green,
                 uint8_t blue,
                 uint64_t paint_style);
unsigned long view_id(const struct ByteArray *byte_array);